--- a/css/style.css
+++ b/css/style.css
@@ -8,17 +8,34 @@ ul {
     list-style: none;
 }
 
+
+/* 
+********
+debug
+********
+ */
+
+.debug .container {
+    background-color: aquamarine;
+}
+
+.debug .box {
+    background-color: brown;
+}
+
 /* 
 ********
 Main
 ********
  */
 
+
+
+
 .container {
     display: flex;
     margin: 30px auto;
     gap: 20px;
-    background-color: aquamarine;
     flex-wrap: wrap;
     max-width: 1300px;
     justify-content: center;
@@ -29,19 +46,20 @@ Main
 
 .content {
     position: relative;
+    line-height: 10px;
 }
 
 
 .box {
     min-width: calc(450px - 40px);
     height: 700px;
-    background-color: brown;
     padding: 2px;
 }
 
 img {
     width: calc(450px - 40px);
     min-height: 640px;
+    display: block;
 }
 
 .marca {
@@ -61,6 +79,12 @@ img {
 
 div.content span {
     padding: 8px 10px;
+    background-color: red;
+    color: white;
+    font-weight: 600;
+}
+
+.sconto .sostenibilità {
     background-color: green;
 }
 
@@ -70,10 +94,16 @@ div.content span {
 }
 
 #hearts {
-    padding: 10px 20px;
+    padding: 15px 15px;
     background-color: white;
     position: absolute;
-    top: 20px;
+    top: 10px;
     right: 0;
-    font-size: 30px;
+    font-size: 35px;
 }
+
+/* 
+********
+:hover
+********
+ */
