--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,45 @@ debug
     background-color: brown;
 }
 
+
+/* 
+********
+Header
+********
+ */
+header {
+    color: white;
+    background-color: #ff6900;
+    font-size: 14px;
+    box-shadow: 1px 1px 5px black;
+}
+
+header .nav {
+    display: flex;
+    max-width: 1300px;
+    padding: 15px 0px;
+    justify-content: space-between;
+    margin: auto;
+    align-items: center;
+
+}
+
+header img {
+    width: 120px;
+    display: block;
+}
+
+.menu li {
+    margin: 5px;
+    vertical-align: middle;
+}
+
+header ul.menu {
+    display: flex;
+
+
+}
+
 /* 
 ********
 Main
@@ -34,7 +73,7 @@ Main
 
 .container {
     display: flex;
-    margin: 30px auto;
+    margin: 50px auto;
     gap: 20px;
     flex-wrap: wrap;
     max-width: 1300px;
@@ -56,10 +95,17 @@ Main
     padding: 2px;
 }
 
-img {
+main img {
     width: calc(450px - 40px);
     min-height: 640px;
     display: block;
+    z-index: 1;
+}
+
+.img-second {
+    position: absolute;
+    top: 0;
+    opacity: 0;
 }
 
 .marca {
@@ -82,6 +128,7 @@ div.content span {
     background-color: red;
     color: white;
     font-weight: 600;
+
 }
 
 .sconto .sostenibilità {
@@ -91,15 +138,17 @@ div.content span {
 .sconto {
     position: absolute;
     bottom: 50px;
+    z-index: 3;
 }
 
-#hearts {
+.hearts {
     padding: 15px 15px;
     background-color: white;
     position: absolute;
     top: 10px;
     right: 0;
     font-size: 35px;
+    z-index: 3;
 }
 
 /* 
@@ -107,3 +156,11 @@ div.content span {
 :hover
 ********
  */
+
+.img-second:hover {
+    opacity: 1;
+}
+
+.hearts:hover {
+    color: red;
+}
