--- a/css/style.css
+++ b/css/style.css
@@ -8,22 +8,6 @@ ul {
     list-style: none;
 }
 
-
-/* 
-********
-debug
-********
- */
-
-.debug .container {
-    background-color: aquamarine;
-}
-
-.debug .box {
-    background-color: brown;
-}
-
-
 /* 
 ********
 Header
@@ -40,11 +24,10 @@ header .nav,
 footer .nav-footer {
     display: flex;
     max-width: 1300px;
-    padding: 15px 0px;
+    padding: 15px 10px;
     justify-content: space-between;
     margin: auto;
     align-items: center;
-
 }
 
 header img {
@@ -88,13 +71,12 @@ Main
 .content {
     position: relative;
     line-height: 10px;
+    width: 100%;
 }
 
 
 .box {
     min-width: calc(450px - 40px);
-    height: 700px;
-    padding: 2px;
 }
 
 main img {
